done to sp-lang#string

--- a/new_age_pl_sildes/theme/scss/default.scss
+++ b/new_age_pl_sildes/theme/scss/default.scss
@@ -2,7 +2,8 @@
 @import "compass/css3/columns";
 @import "compass/css3/user-interface";
 
-$social-tags: '#yourhashtag';
+$social-tags: 'New Age Programming Languages / (CC)BY-SA';
+
 $brand-small-icon-size: 30px;
 
 $gray-1: #e6e6e6;
